src/core/config/transformer/snapshots/tailcall__core__config__transformer__rename_fields__tests__test.snap
---
source: src/core/config/transformer/rename_fields.rs
expression: actual.to_sdl()
---
type Address {
  code: String
}

type User @addField(name: "zipcode", path: ["address", "zipcode"]) {
  address: Address @omit
  name: String
}
